Altered to reflect change in my personal domain

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Created by Jason Dreisbach 
-blog.jtdreisb.info
+www.jasondreisbach.com
 ==================================================================
 
 See LISCENCE for the MIT license this code is distributed under
