--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Created by Jason Dreisbach
 www.jasondreisbach.com
 ==================================================================
 
-See LISCENCE for the MIT license this code is distributed under
+See LICENSE for the MIT license this code is distributed under
